--- a/membres/Erhan/Omurice/index.html
+++ b/membres/Erhan/Omurice/index.html
@@ -50,14 +50,11 @@
         <div class="container">
             <div class="hero-content text-center">
                 <div class="hero-text wow fadeIn" data-wow-delay=".8s">
-                    <h3 class="hero-title">Restaurant is a responsive Bootstrap theme</h3>
+                    <h3 class="hero-title">Omurice オムラ Recette</h3>
                     <p class="hero-description">Lorem ipsum dolor sit amet bacon</p>
                     <p class="hero-buttons">
-                        <a href="#about-us" class="btn btn-dark">
-                            <strong>Read More</strong>
-                        </a>
-                        <a href="#price" class="btn btn-main featured">
-                            <strong>Pricing</strong>
+                        <a href="#price" class="btn btn-main featured" style="scroll-behavior: smooth;">
+                            <strong>Voir la recette</strong>
                         </a>
 
                     </p>
@@ -68,44 +65,7 @@
 	<!--
     Header start 
 	============================== -->
-	<nav id="navigation">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="block">
-                        <nav class="navbar navbar-default">
-                          <div class="container-fluid">
-                            <!-- Brand and toggle get grouped for better mobile display -->
-                            <div class="navbar-header">
-                              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                              </button>
-                                  <a class="navbar-brand" href="#">
-                                    <img src="images/logo.png" alt="Logo">
-                                  </a>
 
-                            </div>
-
-                            <!-- Collect the nav links, forms, and other content for toggling -->
-                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                              <ul class="nav navbar-nav navbar-right" id="top-nav">
-                                <li><a href="#home">Home</a></li>
-                                <li><a href="#about-us">about us</a></li>
-                                <li><a href="#price">Menu</a></li>
-                                <li><a href="#food">Food</a></li>
-                                <li><a href="#contact-us">contacts</a></li>
-                              </ul>
-                            </div><!-- /.navbar-collapse -->
-                          </div><!-- /.container-fluid -->
-                        </nav>
-                    </div>
-                </div><!-- .col-md-12 close -->
-            </div><!-- .row close -->
-        </div><!-- .container close -->
-	</nav><!-- header close -->
     <!--
     Slider start
     ============================== -->
@@ -116,11 +76,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img class="wow fadeInLeft img-responsive" data-wow-duration="300ms" data-wow-delay="400ms" src="images/food.jpg" alt="cooker-img">
+                    <img class="wow fadeInLeft img-responsive" data-wow-duration="300ms" data-wow-delay="400ms" src="images/omurice-01.jpg" alt="cooker-img">
                 </div>
                 <div class="col-md-6">
-                    <h1 class="wow heading fadeInRight"><span>Restaurant</span> always needs a <span>good</span> website</h1>
-                    <p class="wow fadeInRight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pulvinar lacus enim, id gravida nunc eleifend eu. Vivamus et quam facilisis, mattis enim sit amet, egestas turpis. Nullam luctus, metus sit amet ultricies mattis, dui sem condimentum neque, non lacinia massa ex ut eros. Quisque convallis tristique neque et viverra. </p>
+                    <h1 class="wow heading fadeInRight"><span>Omurice</span> always needs a <span>good</span> website</h1>
+                    <p class="wow fadeInRight">L'Omurice (オムラ) ou riz omu est un plat japonais populaire d'inspiration occidentale. Le mot « omurice » est un mot-valise japonais pour omelette (omelette) et riz, ce qui donne le nom de riz à l'omelette ou de riz à l'omelette. 
+
+                        Le riz pour omelette est très populaire au Japon, mais il l'est également en Corée. </p>
                 </div>
             </div><!-- .row close -->
         </div><!-- .containe close -->
@@ -131,26 +93,26 @@
                 <div class="col-md-12">
                     <div class="block wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
                         <div class="title">
-                            <h3>Our <span>Services</span></h3>
+                            <h3>Our <span>Ingredients</span></h3>
                         </div>
                         <div id="owl-example" class="owl-carousel">
                             <div>
                                 <br>
                                 <i class="fa fa-trophy fa-5x" style="color:#b0743c;"></i>
                                 <br><br>
-                                <h2>Champion service</h2>
+                                <h2>Riz</h2>
                             </div>
                             <div>
                                 <br>
                                 <i class="fa fa-usd fa-5x" style="color:#b0743c;"></i>
                                 <br><br>
-                                <h2>Extremely low prices</h2>
+                                <h2>Oeuf</h2>
                             </div>
                             <div>
                                 <br>
                                 <i class="fa fa-headphones fa-5x" style="color:#b0743c;"></i>
                                 <br><br>
-                                <h2>24/7 support</h2>
+                                <h2>Beurre</h2>
                             </div>
                             <div>
                                 <br>
