footer + ajouts dossier footers

--- a/footer.html
+++ b/footer.html
@@ -72,5 +72,8 @@
         </div>
     </div>
 </footer>
+<div class="footer-colll">
+    <p>&copy; 2024 Baris, Anthony, Marwan, Lee, Guilaume, Tevin, Erhan, Rami / AsianFood. Tous droits réservés.</p>
+  </div>
 </body>
 </html>
