--- a/PageRecetteMarwan.html
+++ b/PageRecetteMarwan.html
@@ -25,8 +25,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Wittgenstein:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <!-- Main CSS File -->
-    <link href="./assets/css/main.css" rel="stylesheet">
-    <link href="./assets/css/baris.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/baris.css" rel="stylesheet">
 
     <!-- =======================================================
     * Template Name: Yummy
@@ -160,7 +160,7 @@
     </div>
     </div>
     <div class="row justify-content-center">
-        <div style="background-color: antiquewhite;" class=" text-center mt-5 col">
+        <div  class=" text-center mt-5 col">
         <p style="font-size: xx-large;">Etape 6</p>
         <p>Ajouter la pâte de saté (c'est une pâte épicée, j'en met l'équivalent de 4 à 5 cuillères à soupe cependant vous pouvez en mettre plus ou moins selon les goûts). Ajouter la sauce soja, environ 2 cuillères à soupe.</p>
     </div>
@@ -176,12 +176,12 @@
 </body>
 </html>
     <!-- Vendor JS Files -->
-    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/vendor/php-email-form/validate.js"></script>
-    <script src="../assets/vendor/aos/aos.js"></script>
-    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
     <!-- Main JS File -->
     <script src="baris.js"></script>
