--- a/membres/Erhan/Omurice/index.html
+++ b/membres/Erhan/Omurice/index.html
@@ -76,69 +76,66 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img class="wow fadeInLeft img-responsive" data-wow-duration="300ms" data-wow-delay="400ms" src="images/omurice-01.jpg" alt="cooker-img">
+                    <img class="wow fadeInLeft img-responsive" data-wow-duration="300ms" data-wow-delay="400ms" src="images/Omurice5.jpg" alt="cooker-img">
                 </div>
                 <div class="col-md-6">
-                    <h1 class="wow heading fadeInRight"><span>Omurice</span> always needs a <span>good</span> website</h1>
-                    <p class="wow fadeInRight">L'Omurice (オムラ) ou riz omu est un plat japonais populaire d'inspiration occidentale. Le mot « omurice » est un mot-valise japonais pour omelette (omelette) et riz, ce qui donne le nom de riz à l'omelette ou de riz à l'omelette. 
-
-                        Le riz pour omelette est très populaire au Japon, mais il l'est également en Corée. </p>
+                    <h1 class="wow heading fadeInRight"> Qu’est-ce que le <span>Omurice (オムラ)</span></h1>
+                    <p class="wow fadeInRight">L'Omurice (オムラ) ou riz omu est un plat japonais populaire d'inspiration occidentale. Le mot « omurice » est un mot-valise japonais pour omelette (omelette) et riz, ce qui donne le nom de riz à l'omelette ou de riz à l'omelette. </p>
                 </div>
             </div><!-- .row close -->
         </div><!-- .containe close -->
     </section><!-- #call-to-action close -->
-    <section id="slider">
+    <section class="slider">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="block wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
                         <div class="title">
-                            <h3>Our <span>Ingredients</span></h3>
+                            <h3>SAUCE DEMI-GLACE <span>Ingredients</span></h3>
                         </div>
                         <div id="owl-example" class="owl-carousel">
                             <div>
                                 <br>
-                                <i class="fa fa-trophy fa-5x" style="color:#b0743c;"></i>
+                                <img src="images/Oil2.webp" alt="" height="150px">
                                 <br><br>
-                                <h2>Riz</h2>
+                                <h2>1,5 c. à soupe d'huile de cuisson</h2>
                             </div>
                             <div>
                                 <br>
-                                <i class="fa fa-usd fa-5x" style="color:#b0743c;"></i>
+                                <img src="images/plainflour_200862194.jpg" alt="" height="150px">
                                 <br><br>
-                                <h2>Oeuf</h2>
+                                <h2>1 c. à soupe de farine nature</h2>
                             </div>
                             <div>
                                 <br>
-                                <i class="fa fa-headphones fa-5x" style="color:#b0743c;"></i>
+                                <img src="images/homemade-ketchup.avif" alt="" height="150px">
                                 <br><br>
-                                <h2>Beurre</h2>
+                                <h2>5 c. à soupe de ketchup</h2>
                             </div>
                             <div>
                                 <br>
-                                <i class="fa fa-tree fa-5x" style="color:#b0743c;"></i>
+                                <img src="images/kikkoman.jpg" alt="" height="150px">
                                 <br><br>
-                                <h2>Natural food</h2>
+                                <h2>1 c. à soupe de sauce soja (kikkoman)</h2>
                             </div>
                             <div>
                                 <br>
-                                <i class="fa fa-check fa-5x" style="color:#b0743c;"></i>
+                                <img src="images/Tonkatsu-Sauce.jpg" alt="" height="150px">
                                 <br><br>
-                                <h2>Goverment certified food</h2>
+                                <h2>1 c. à soupe de sauce Tonkatsu</h2>
                             </div>
                             <div>
                                 <br>
-                                <i class="fa fa-truck fa-5x" style="color:#b0743c;"></i>
+                                <img src="images/HONEY.webp" alt="" height="150px">
                                 <br><br>
-                                <h2>Fast delivery</h2>
+                                <h2>1 c à soupe de miel</h2>
                             </div>
                             <div>
                                 <br>
-                                <i class="fa fa-rocket fa-5x" style="color:#b0743c;"></i>
+                                <img src="images/Milk.jpg" alt="" height="150px">
                                 <br><br>
-                                <h2>Kickstarted for 3 years</h2>
+                                <h2>1/4 tasse de lait</h2>
                             </div>
-
                         </div>
                     </div>
                 </div><!-- .col-md-12 close -->
