--- a/membres/Erhan/Omurice/index.html
+++ b/membres/Erhan/Omurice/index.html
@@ -44,20 +44,10 @@
                 <source type="video/mp4" src="videos/Omurice2.mp4" />
             </video>
         </div>
-
-        
-
         <div class="container">
             <div class="hero-content text-center">
                 <div class="hero-text wow fadeIn" data-wow-delay=".8s">
-                    <h3 class="hero-title">Omurice オムラ Recette</h3>
-                    <p class="hero-description">Lorem ipsum dolor sit amet bacon</p>
-                    <p class="hero-buttons">
-                        <a href="#price" class="btn btn-main featured" style="scroll-behavior: smooth;">
-                            <strong>Voir la recette</strong>
-                        </a>
-
-                    </p>
+                    <h3 class="hero-title">Omurice オムラ</h3>
                 </div><!--/ Hero text end -->
             </div><!--/ Hero content end -->
         </div><!--/ Container end -->
@@ -93,7 +83,7 @@
                         <div class="title">
                             <h3>SAUCE DEMI-GLACE <span>Ingredients</span></h3>
                         </div>
-                        <div id="owl-example" class="owl-carousel">
+                        <div class="owl-carousel owl-example">
                             <div>
                                 <br>
                                 <img src="images/Oil2.webp" alt="" height="150px">
@@ -142,6 +132,117 @@
             </div><!-- .row close -->
         </div><!-- .container close -->
     </section><!-- slider close -->
+    <section class="slider">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="block wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
+                        <div class="title">
+                            <h3>FRIED RICE <span>Ingredients</span></h3>
+                        </div>
+                        <div class="owl-carousel owl-example">
+                            <div>
+                                <br>
+                                <img src="images/Carrot.jpg" alt="" height="150px">
+                                <br><br>
+                                <h2>1/2 carotte, finement hachée</h2>
+                            </div>
+                            <div>
+                                <br>
+                                <img src="images/onion.webp" alt="" height="150px">
+                                <br><br>
+                                <h2>1/2 onion, finement hachée</h2>
+                            </div>
+                            <div>
+                                <br>
+                                <img src="images/green-bell-peppers.png" alt="" height="150px">
+                                <br><br>
+                                <h2>1/3 poivron vert, finement hachée</h2>
+                            </div>
+                            <div>
+                                <br>
+                                <img src="images/Diced-ham.jpg" alt="" height="150px">
+                                <br><br>
+                                <h2>80 g de jambon de charcuterie fumé, de bœuf, de porc ou de poulet, finement haché</h2>
+                            </div>
+                            <div>
+                                <br>
+                                <img src="images/rice.jpg" alt="" height="150px">
+                                <br><br>
+                                <h2>2 tasses de riz cuit (à grains courts ou moyens), refroidi</h2>
+                            </div>
+                            <div>
+                                <br>
+                                <img src="images/Oil2.webp" alt="" height="150px">
+                                <br><br>
+                                <h2>Un peu d'huile de cuisson</h2>
+                            </div>
+                            <div>
+                                <br>
+                                <img src="images/homemade-ketchup.avif" alt="" height="150px">
+                                <br><br>
+                                <h2>1 c. à soupe de ketchup</h2>
+                            </div>
+                            <div>
+                                <br>
+                                <img src="images/WorcestershireSauce.jpg" alt="" height="150px">
+                                <br><br>
+                                <h2>1 c. à soupe de sauce Worcestershire</h2>
+                            </div>
+                            <div>
+                                <br>
+                                <img src="images/kikkoman.jpg" alt="" height="150px">
+                                <br><br>
+                                <h2>1 c. à soupe de sauce soja (kikkoman)</h2>
+                            </div>
+                            <div>
+                                <br>
+                                <img src="images/ricewine.jpg" alt="" height="150px">
+                                <br><br>
+                                <h2>1 c. à soupe de vin de riz</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- .col-md-12 close -->
+            </div><!-- .row close -->
+        </div><!-- .container close -->
+    </section><!-- slider close -->
+
+    <section class="slider">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="block wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
+                        <div class="title">
+                            <h3>OMELETTE  <span>Ingredients</span></h3>
+                        </div>
+                        <div class="owl-carousel owl-example">
+                            <div>
+                                <br>
+                                <img src="images/egg.jpg" alt="" height="150px">
+                                <br><br>
+                                <h2>6 à 9 œufs (3 œufs par portion)</h2>
+                            </div>
+                            <div>
+                                <br>
+                                <img src="images/salt.jpg" alt="" height="150px">
+                                <br><br>
+                                <h2>Une pincée de sel</h2>
+                            </div>
+                            <div>
+                                <br>
+                                <img src="images/Oil2.webp" alt="" height="150px">
+                                <br><br>
+                                <h2>Un peu d'huile de cuisson</h2>
+                            </div>                            
+                        </div>
+                    </div>
+                </div><!-- .col-md-12 close -->
+            </div><!-- .row close -->
+        </div><!-- .container close -->
+    </section><!-- slider close -->
+
+    
     <section id="price">
         <div class="container">
             <div class="row">
