page recette + footer ajout emrah

--- a/footer.html
+++ b/footer.html
@@ -73,7 +73,7 @@
     </div>
 </footer>
 <div class="footer-colll">
-    <p>&copy; 2024 Baris, Anthony, Marwan, Lee, Guilaume, Tevin, Erhan, Rami / AsianFood. Tous droits réservés.</p>
+    <p>&copy; 2024 Baris, Anthony, Marwan, Lee, Guilaume, Tevin, Erhan,Emrah, Rami / AsianFood. Tous droits réservés.</p>
   </div>
 </body>
 </html>
