--- a/membres/baris/baris.html
+++ b/membres/baris/baris.html
@@ -28,7 +28,7 @@
     <link href="../baris/assets/css/baris.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/heroes/hero-1/assets/css/hero-1.css">
-    <link href="csss.txt" rel="stylesheet">
+    <link href="csss.css" rel="stylesheet">
     <link href="footer.css" rel="stylesheet">
 
     <title>Document</title>
@@ -97,9 +97,22 @@
     </div>
   </div>
 </section>
+<hr>
 <!-- ma recette header -->
+ <!--Titre -->
+<h1 class="recettee" style="text-align: center; font-size: 8vh; border: solid black; border-radius: 20;"> Recette</h1>
+<!--Titre -->
+<!--contenu -->
+<article>
+<img class="img" style="text-align: center; font-size: 8vh; border: solid black; border-radius: 20; margin-left: 150px;" src="recette.jpg" alt="plat" width="500" height="700">
+<h2>Ingredients</h2>
+<p> </p>
+</article>
 
 
+
+
+<!--contenu -->
 
 
 
@@ -119,6 +132,7 @@
 
 
 <!-- ma recette -->
+ <hr>
   <footer class="footer" style="background-image: url(assets/img/baris/footerImg.png);">
     <div class="container">
         <div class="row">
