--- a/membres/Anthony/recette/recetteAntho.html
+++ b/membres/Anthony/recette/recetteAntho.html
@@ -147,7 +147,7 @@
       </div>
 
       <div class="col-md-6 text-center">
-        <img src="sushi.jpg" alt="sushi image" class="img-fluid">
+        <img src="ingredients.jpeg" alt="ingredients sushi" class="img-fluid5" id="sushiSteps">
       </div>
     </div>
 
