--- a/membres/baris/baris.html
+++ b/membres/baris/baris.html
@@ -103,16 +103,56 @@
 <h1 class="recettee" style="text-align: center; font-size: 8vh; border: solid black; border-radius: 20;"> Recette</h1>
 <!--Titre -->
 <!--contenu -->
-<article>
-<img class="img" style="text-align: center; font-size: 8vh; border: solid black; border-radius: 20; margin-left: 150px;" src="recette.jpg" alt="plat" width="500" height="700">
-<h2>Ingredients</h2>
-<p> </p>
-</article>
+<div class="container my-4">
+  <div class="row">
+      <div class="col-md-6 d-flex justify-content-center">
+          <img id="imgg" class="img img-fluid" style="border: solid black;" src="recette.jpg" alt="plat">
+      </div>
+      <div class="col-md-6">
+          <h2 class="ingre" style="border: solid black; text-align: center; padding: 10px; background-color: #">Ingrédients</h2>
+          <div class="justify-content-center" style="padding: 15px; border: solid black; background-color: #;">
+            <p>
+              Dakgangjeong est un plat coréen de poulet frit en sauce sucrée et épicée. Voici les ingrédients typiques pour préparer Dakgangjeong :
+            </p>
+            <h5 style="font-weight: bold;">Pour le poulet :</h5>
+            <ul>
+              <li>500 g de morceaux de poulet (cuisses ou ailes désossées)</li>
+              <li>1 cuillère à café de sel</li>
+              <li>1 cuillère à café de poivre</li>
+              <li>2 cuillères à soupe de vin de riz (ou de vin blanc sec)</li>
+              <li>1 cuillère à soupe de gingembre râpé</li>
+            </ul>
+            <h5>Pour la pâte à frire :</h5>
+            <ul>
+              <li>1/2 tasse de farine de blé</li>
+              <li>1/2 tasse de fécule de maïs (ou fécule de pomme de terre)</li>
+              <li>1 œuf</li>
+              <li>1/2 tasse d'eau froide</li>
+            </ul>
+            <h5>Pour la sauce :</h5>
+            <ul>
+              <li>2 cuillères à soupe de sauce soja</li>
+              <li>2 cuillères à soupe de gochujang (pâte de piment coréenne)</li>
+              <li>2 cuillères à soupe de sirop de maïs (ou miel)</li>
+              <li>2 cuillères à soupe de sucre</li>
+              <li>2 cuillères à soupe de vinaigre de riz</li>
+              <li>1 cuillère à soupe de ketchup</li>
+              <li>2 gousses d'ail hachées</li>
+              <li>1 cuillère à café de graines de sésame</li>
+              <li>1 cuillère à soupe d'huile de sésame</li>
+            </ul>
+            <h5>Pour la garniture :</h5>
+            <ul>
+              <li>Graines de sésame grillées</li>
+              <li>Cacahuètes ou noix hachées (facultatif)</li>
+            </ul>
+          </div>
+      </div>
+  </div>
+</div>
 
 
 
-
-<!--contenu -->
 
 
 
