omelette recipe ok

--- a/membres/Erhan/Omurice/index.html
+++ b/membres/Erhan/Omurice/index.html
@@ -287,12 +287,21 @@
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
                                     <div class="item">
                                         <div class="item-title">
-                                            <h2>3. Versez la sauce de l'étape 1 et remuez bien. Augmentez le feu et faites cuire à feu moyen-doux à moyen jusqu'à ce que la sauce épaississe (environ 8 à 10 minutes). Remuez souvent. Mettre de côté.</h2>
+                                            <h2>3. Éteignez le feu. Couvrir de papier d'aluminium ou d'un couvercle pour garder le riz au chaud pendant que vous préparez les autres ingrédients.</h2>
                                             <div class="border-bottom"></div>
                                         </div>
                                     </div>
                                 </li>
-                                <img src="images/3.webp" alt="" width="250px">
+                                <img src="images/06.webp" alt="" width="250px">
+                                <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
+                                    <div class="item">
+                                        <div class="item-title">
+                                            <h2>4. Au moment de servir, façonnez le riz dans un petit bol pour former des monticules de riz. Placez l'assiette de service sur le bol et retournez. Retirez le bol.</h2>
+                                            <div class="border-bottom"></div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <img src="images/07.webp" alt="" width="250px">
                             </ul>
                         </div>
                     </div>
@@ -348,30 +357,56 @@
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="300ms">
                                     <div class="item">
                                         <div class="item-title">
-                                            <h2>1. Préchauffez une poêle et ajoutez un peu d'huile de cuisson. Faire revenir la carotte, l'oignon, le poivron vert et le jambon fumé jusqu'à ce que tous les ingrédients soient cuits.</h2>
+                                            <h2>1. Battez les œufs dans un bol. Pour obtenir une texture onctueuse, tamisez les œufs. (C'est aussi un des points clés de la réussite car cela permet à l'omelette de tourner en douceur). Ajouter une pincée de sel.</h2>
                                             <div class="border-bottom"></div>                                            
                                         </div>                                        
                                     </div>                                    
                                 </li>
-                                <img src="images/04.jpg" alt="" height="250px">
+                                <img src="images/08.webp" alt="" height="250px">
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">
                                     <div class="item">
                                         <div class="item-title">
-                                            <h2>2. Ajoutez le riz et l'assaisonnement pour riz et mélangez bien pendant 1 à 2 minutes.</h2>
+                                            <h2>2. Preheat a non-stick frying pan over medium high heat. (It should be heated well enough for the egg to bubble up when you pour it in.) Add some cooking oil and spread it all over the pan.</h2>
                                             <div class="border-bottom"></div>
                                         </div>
                                     </div>
                                 </li>
-                                <img src="images/05.webp" alt="" width="250px">
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
                                     <div class="item">
                                         <div class="item-title">
-                                            <h2>3. Versez la sauce de l'étape 1 et remuez bien. Augmentez le feu et faites cuire à feu moyen-doux à moyen jusqu'à ce que la sauce épaississe (environ 8 à 10 minutes). Remuez souvent. Mettre de côté.</h2>
+                                            <h2>3. Versez l'œuf battu dans la poêle et faites-le cuire jusqu'à ce que le bord (environ 3 mm) soit cuit. Mais un indicateur plus simple est lorsque l'omelette commence à former des bulles d'air au milieu de la poêle. Vous devriez rechercher des bulles de taille un peu plus grosse.</h2>
                                             <div class="border-bottom"></div>
                                         </div>
                                     </div>
                                 </li>
-                                <img src="images/3.webp" alt="" width="250px">
+                                <img src="images/09.webp" alt="" width="250px">
+                                <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
+                                    <div class="item">
+                                        <div class="item-title">
+                                            <h2>4. Tenez une baguette en bois dans chaque main en diagonale par rapport à vous et poussez l'œuf du bord vers le centre tout en maintenant un espace d'environ 4 à 5 cm (1,5 à 2 pouces) entre chaque baguette, et commencez à faire tournoyer vos baguettes dans une direction. En tenant l'œuf en diagonale plutôt que parallèlement à vous-même, vous aurez plus d'espace pour faire tourner l'œuf.</h2>
+                                            <div class="border-bottom"></div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <img src="images/10.webp" alt="" width="250px">
+                                <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
+                                    <div class="item">
+                                        <div class="item-title">
+                                            <h2>5. Tenez les baguettes d'une main et faites glisser lentement l'omelette de la poêle sur le riz façonné.</h2>
+                                            <div class="border-bottom"></div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <img src="images/11.webp" alt="" width="250px">
+                                <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
+                                    <div class="item">
+                                        <div class="item-title">
+                                            <h2>6. Versez la sauce demi-glace (ou le ketchup si vous n'avez pas fait la sauce) et servez.</h2>
+                                            <div class="border-bottom"></div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <img src="images/12.webp" alt="" width="250px">
                             </ul>
                         </div>
                     </div>
@@ -379,8 +414,6 @@
             </div><!-- .row close -->
         </div><!-- .containe close -->
     </section><!-- #price close -->
-
-    
 
     <section id="contact-us">
         <div class="container">
