--- a/membres/baris/baris.html
+++ b/membres/baris/baris.html
@@ -28,6 +28,8 @@
     <link href="../baris/assets/css/baris.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/heroes/hero-1/assets/css/hero-1.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
     <link href="csss.css" rel="stylesheet">
     <link href="footer.css" rel="stylesheet">
 
@@ -154,10 +156,34 @@
 <!--ingrédients -->
 <!--préparation -->
 
+<h1 class="recettee">Préparation</h1>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h3 class="etape-preparation">Étapes de la préparation</h3>
+            <ol>
+                <li>Commencez par mariner le poulet avec le sel, le poivre, le vin de riz et le gingembre râpé. Laissez reposer pendant au moins 30 minutes.</li>
+                <li>Préparez la pâte à frire en mélangeant la farine de blé, la fécule de maïs, l'œuf et l'eau froide jusqu'à obtenir une texture lisse.</li>
+                <li>Chauffez l'huile dans une casserole ou une friteuse à 180°C.</li>
+                <li>Pendant que l'huile chauffe, trempez chaque morceau de poulet mariné dans la pâte à frire, puis faites-les frire jusqu'à ce qu'ils soient dorés et croustillants.</li>
+                <li>Pendant que le poulet cuit, préparez la sauce en mélangeant la sauce soja, le gochujang, le sirop de maïs, le sucre, le vinaigre de riz, le ketchup, l'ail, les graines de sésame et l'huile de sésame dans une casserole à feu doux. Laissez mijoter jusqu'à épaississement.</li>
+                <li>Une fois le poulet frit, mélangez-le délicatement avec la sauce jusqu'à ce qu'il soit bien enrobé.</li>
+                <li>Servez le Dakgangjeong saupoudré de graines de sésame grillées et éventuellement de cacahuètes ou de noix hachées.</li>
+            </ol>
+        </div>
+        <div class="col-md-6">
+            <div class="img-container">
+                <img id="imgg-preparation" class="img img-fluid" src="plat.webp" alt="préparation">
+            </div>
+            <p class="legende-image">Image de la préparation finale du Dakgangjeong.</p>
+        </div>
+    </div>
+</div>
+
 
 
 <!--préparation -->
-<h1 class="recettee" style="text-align: center; font-size: 8vh; border: solid black; border-radius: 20;"> Préparation </h1>
 
 
 
