--- a/membres/baris/baris.html
+++ b/membres/baris/baris.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/heroes/hero-1/assets/css/hero-1.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link href="csss.css" rel="stylesheet">
     <link href="footer.css" rel="stylesheet">
 
@@ -89,100 +89,96 @@
     </div>
   </header>
 <!-- ma recette header -->
-<section class="bsb-hero-1 px-3 bsb-overlay bsb-hover-pull" style="background-image: url('l-intro-1687386179.jpg');">
+<section class="bsb-hero-1 px-3 bsb-overlay bsb-hover-pull" style="background-image: url('l-intro-1687386179.jpg');" data-aos="fade-up">
   <div class="container">
     <div class="row justify-content-md-center">
       <div class="col-12 col-md-11 col-lg-9 col-xl-7 col-xxl-6 text-center text-white">
-        <h2 class="display-3 fw-bold mb-3">dakgangjeong</h2>
-        <p class="lead mb-5">Un plat coréen composé de morceaux de poulet frits enrobés d'une sauce sucrée, épicée et collante. Souvent servi en apéritif ou en plat principal, il est apprécié pour son mélange harmonieux de textures croustillantes et de saveurs riches.</p>
+        <h2 class="display-3 fw-bold mb-3" data-aos="fade-up">Dakgangjeong</h2>
+        <p class="lead mb-5" data-aos="fade-up" data-aos-delay="200">Un plat coréen composé de morceaux de poulet frits enrobés d'une sauce sucrée, épicée et collante. Souvent servi en apéritif ou en plat principal, il est apprécié pour son mélange harmonieux de textures croustillantes et de saveurs riches.</p>
       </div>
     </div>
   </div>
 </section>
-<hr>
-<!-- ma recette header -->
- <!--Titre -->
-<h1 class="recettee" style="text-align: center; font-size: 8vh; border: solid black; border-radius: 20;"> Recette</h1>
-<!--Titre -->
 
-<!--ingrédients -->
+<hr>
+
+<!-- Titre de la recette -->
+<h1 class="recettee" data-aos="fade-up">Recette</h1>
+
+<!-- Ingrédients -->
 <div class="container my-4">
   <div class="row">
-      <div class="col-md-6 d-flex justify-content-center">
-          <img id="imgg" class="img img-fluid" style="border: solid black;" src="recette.jpg" alt="plat">
+    <div class="col-md-6 d-flex justify-content-center" data-aos="fade-right">
+      <img id="imgg" class="img img-fluid" style="border: solid black;" src="recette.jpg" alt="plat">
+    </div>
+    <div class="col-md-6" data-aos="fade-left">
+      <h2 class="ingre" data-aos="fade-up">Ingrédients</h2>
+      <div class="justify-content-center" style="padding: 15px; border: solid black;">
+        <p data-aos="fade-up" data-aos-delay="100">
+          Dakgangjeong est un plat coréen de poulet frit en sauce sucrée et épicée. Voici les ingrédients typiques pour préparer Dakgangjeong :
+        </p>
+        <h5 id="poulet" data-aos="fade-up" data-aos-delay="200">Pour le poulet :</h5>
+        <ul data-aos="fade-up" data-aos-delay="300">
+          <li>500 g de morceaux de poulet (cuisses ou ailes désossées)</li>
+          <li>1 cuillère à café de sel</li>
+          <li>1 cuillère à café de poivre</li>
+          <li>2 cuillères à soupe de vin de riz (ou de vin blanc sec)</li>
+          <li>1 cuillère à soupe de gingembre râpé</li>
+        </ul>
+        <h5 id="pate" data-aos="fade-up" data-aos-delay="400">Pour la pâte à frire :</h5>
+        <ul data-aos="fade-up" data-aos-delay="500">
+          <li>1/2 tasse de farine de blé</li>
+          <li>1/2 tasse de fécule de maïs (ou fécule de pomme de terre)</li>
+          <li>1 œuf</li>
+          <li>1/2 tasse d'eau froide</li>
+        </ul>
+        <h5 id="sauce" data-aos="fade-up" data-aos-delay="600">Pour la sauce :</h5>
+        <ul data-aos="fade-up" data-aos-delay="700">
+          <li>2 cuillères à soupe de sauce soja</li>
+          <li>2 cuillères à soupe de gochujang (pâte de piment coréenne)</li>
+          <li>2 cuillères à soupe de sirop de maïs (ou miel)</li>
+          <li>2 cuillères à soupe de sucre</li>
+          <li>2 cuillères à soupe de vinaigre de riz</li>
+          <li>1 cuillère à soupe de ketchup</li>
+          <li>2 gousses d'ail hachées</li>
+          <li>1 cuillère à café de graines de sésame</li>
+          <li>1 cuillère à soupe d'huile de sésame</li>
+        </ul>
+        <h5 id="garni" data-aos="fade-up" data-aos-delay="800">Pour la garniture :</h5>
+        <ul data-aos="fade-up" data-aos-delay="900">
+          <li>Graines de sésame grillées</li>
+          <li>Cacahuètes ou noix hachées (facultatif)</li>
+        </ul>
       </div>
-      <div class="col-md-6">
-          <h2 class="ingre" style="border: solid black; text-align: center; padding: 10px; ">Ingrédients</h2>
-          <div class="justify-content-center" style="padding: 15px; border: solid black;">
-            <p>
-              Dakgangjeong est un plat coréen de poulet frit en sauce sucrée et épicée. Voici les ingrédients typiques pour préparer Dakgangjeong :
-            </p>
-            <h5 id="poulet">Pour le poulet :</h5>
-            <ul>
-              <li>500 g de morceaux de poulet (cuisses ou ailes désossées)</li>
-              <li>1 cuillère à café de sel</li>
-              <li>1 cuillère à café de poivre</li>
-              <li>2 cuillères à soupe de vin de riz (ou de vin blanc sec)</li>
-              <li>1 cuillère à soupe de gingembre râpé</li>
-            </ul>
-            <h5 id="pate">Pour la pâte à frire :</h5>
-            <ul>
-              <li>1/2 tasse de farine de blé</li>
-              <li>1/2 tasse de fécule de maïs (ou fécule de pomme de terre)</li>
-              <li>1 œuf</li>
-              <li>1/2 tasse d'eau froide</li>
-            </ul>
-            <h5 id="sauce">Pour la sauce :</h5>
-            <ul>
-              <li>2 cuillères à soupe de sauce soja</li>
-              <li>2 cuillères à soupe de gochujang (pâte de piment coréenne)</li>
-              <li>2 cuillères à soupe de sirop de maïs (ou miel)</li>
-              <li>2 cuillères à soupe de sucre</li>
-              <li>2 cuillères à soupe de vinaigre de riz</li>
-              <li>1 cuillère à soupe de ketchup</li>
-              <li>2 gousses d'ail hachées</li>
-              <li>1 cuillère à café de graines de sésame</li>
-              <li>1 cuillère à soupe d'huile de sésame</li>
-            </ul>
-            <h5 id="garni">Pour la garniture :</h5>
-            <ul>
-              <li>Graines de sésame grillées</li>
-              <li>Cacahuètes ou noix hachées (facultatif)</li>
-            </ul>
-          </div>
-      </div>
+    </div>
   </div>
 </div>
-<!--ingrédients -->
-<!--préparation -->
+<!-- Ingrédients -->
 
-<h1 class="recettee">Préparation</h1>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <h3 class="etape-preparation">Étapes de la préparation</h3>
-            <ol>
-                <li>Commencez par mariner le poulet avec le sel, le poivre, le vin de riz et le gingembre râpé. Laissez reposer pendant au moins 30 minutes.</li>
-                <li>Préparez la pâte à frire en mélangeant la farine de blé, la fécule de maïs, l'œuf et l'eau froide jusqu'à obtenir une texture lisse.</li>
-                <li>Chauffez l'huile dans une casserole ou une friteuse à 180°C.</li>
-                <li>Pendant que l'huile chauffe, trempez chaque morceau de poulet mariné dans la pâte à frire, puis faites-les frire jusqu'à ce qu'ils soient dorés et croustillants.</li>
-                <li>Pendant que le poulet cuit, préparez la sauce en mélangeant la sauce soja, le gochujang, le sirop de maïs, le sucre, le vinaigre de riz, le ketchup, l'ail, les graines de sésame et l'huile de sésame dans une casserole à feu doux. Laissez mijoter jusqu'à épaississement.</li>
-                <li>Une fois le poulet frit, mélangez-le délicatement avec la sauce jusqu'à ce qu'il soit bien enrobé.</li>
-                <li>Servez le Dakgangjeong saupoudré de graines de sésame grillées et éventuellement de cacahuètes ou de noix hachées.</li>
-            </ol>
-        </div>
-        <div class="col-md-6">
-            <div class="img-container">
-                <img id="imgg-preparation" class="img img-fluid" src="plat.webp" alt="préparation">
-            </div>
-            <p class="legende-image">Image de la préparation finale du Dakgangjeong.</p>
-        </div>
+<!-- Préparation -->
+<div class="container" data-aos="fade-up">
+  <div class="row">
+    <div class="col-md-6" data-aos="fade-right">
+      <h1 class="recettee" data-aos="fade-up">Préparation</h1>
+      <h3 class="etape-preparation" data-aos="fade-up">Étapes de la préparation</h3>
+      <ol data-aos="fade-up" data-aos-delay="100">
+        <li>Commencez par mariner le poulet avec le sel, le poivre, le vin de riz et le gingembre râpé. Laissez reposer pendant au moins 30 minutes.</li>
+        <li>Préparez la pâte à frire en mélangeant la farine de blé, la fécule de maïs, l'œuf et l'eau froide jusqu'à obtenir une texture lisse.</li>
+        <li>Chauffez l'huile dans une casserole ou une friteuse à 180°C.</li>
+        <li>Pendant que l'huile chauffe, trempez chaque morceau de poulet mariné dans la pâte à frire, puis faites-les frire jusqu'à ce qu'ils soient dorés et croustillants.</li>
+        <li>Pendant que le poulet cuit, préparez la sauce en mélangeant la sauce soja, le gochujang, le sirop de maïs, le sucre, le vinaigre de riz, le ketchup, l'ail, les graines de sésame et l'huile de sésame dans une casserole à feu doux. Laissez mijoter jusqu'à épaississement.</li>
+        <li>Une fois le poulet frit, mélangez-le délicatement avec la sauce jusqu'à ce qu'il soit bien enrobé.</li>
+        <li>Servez le Dakgangjeong saupoudré de graines de sésame grillées et éventuellement de cacahuètes ou de noix hachées.</li>
+      </ol>
     </div>
+    <div class="col-md-6" data-aos="fade-left">
+      <div class="img-container">
+        <img id="imgg-preparation" class="img img-fluid" src="plat.webp" alt="préparation" data-aos="fade-up" data-aos-delay="100">
+      </div>
+      <p class="legende-image" data-aos="fade-up" data-aos-delay="200">Image de la préparation finale du Dakgangjeong.</p>
+    </div>
+  </div>
 </div>
-
-
-
 <!--préparation -->
 
 
@@ -260,6 +256,10 @@
  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
  <!-- Main JS File -->
+ <script>
+  AOS.init();
+</script>
+ <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
  <script src="baris.js"></script>
  <script src="assets/js/main.js"></script>
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
