--- a/membres/Erhan/Omurice/index.html
+++ b/membres/Erhan/Omurice/index.html
@@ -30,6 +30,16 @@
     <script src="js/plugins.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
+    <style>
+        h3, span {
+  background: linear-gradient(to left top, black, red);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: japanese;
+}
+
+       
+    </style>
 	</head>
 	<body>
 	<!--
@@ -47,7 +57,7 @@
         <div class="container">
             <div class="hero-content text-center">
                 <div class="hero-text wow fadeIn" data-wow-delay=".8s">
-                    <h3 class="hero-title">Omurice オムラ</h3>
+                    <h3 class="hero-title" >Omurice オムラ</h3>
                 </div><!--/ Hero text end -->
             </div><!--/ Hero content end -->
         </div><!--/ Container end -->
@@ -89,50 +99,50 @@
                                     <div class="col-md-12">
                                         <div class="block wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
                                             <div class="title">
-                                                <h3>SAUCE DEMI-GLACE <span>Ingredients</span></h3>
+                                                <h3 style="color: red;">SAUCE DEMI-GLACE <span style="color: black;">Ingredients</span></h3>
                                             </div>
                                             <div class="owl-carousel owl-example">
                                                 <div>
                                                     <br>
-                                                    <img src="images/Oil2.webp" alt="" height="150px">
+                                                    <img src="images/Oil.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1,5 c. à soupe d'huile de cuisson</h2>
+                                                    <h2>1,5 c. à soupe d'huile <br> de cuisson</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/plainflour_200862194.jpg" alt="" height="150px">
+                                                    <img src="images/plainflour.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1 c. à soupe de farine nature</h2>
+                                                    <h2>1 c. à soupe de <br> farine nature</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/homemade-ketchup.avif" alt="" height="150px">
+                                                    <img src="images/ketchup.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>5 c. à soupe de ketchup</h2>
+                                                    <h2>5 c. à soupe de <br> ketchup</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/kikkoman.jpg" alt="" height="150px">
+                                                    <img src="images/kikkoman.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1 c. à soupe de sauce soja (kikkoman)</h2>
+                                                    <h2>1 c. à soupe de <br> sauce soja (kikkoman)</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/Tonkatsu-Sauce.jpg" alt="" height="150px">
+                                                    <img src="images/Tonkatsu-Sauce.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1 c. à soupe de sauce Tonkatsu</h2>
+                                                    <h2>1 c. à soupe de <br> sauce Tonkatsu</h2>
                                                 </div>
                                                 <div>
                                                     <br>
                                                     <img src="images/HONEY.webp" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1 c à soupe de miel</h2>
+                                                    <h2>1 c à soupe de <br> miel</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/Milk.jpg" alt="" height="150px">
+                                                    <img src="images/Milk.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1/4 tasse de lait</h2>
+                                                    <h2>1/4 tasse de <br> lait</h2>
                                                 </div>
                                             </div>
                                         </div>
@@ -142,7 +152,7 @@
                         </section><!-- slider close -->
                         <div class="pricing-list">
                             <div class="title">
-                                <h3>Recette <span>DEMI-GLACE SAUCE</span></h3>
+                                <h3 style="color: black;">Recette <span style="color: red;">DEMI-GLACE SAUCE</span></h3>
                             </div>
                             <ul>
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="300ms">
@@ -197,63 +207,63 @@
                                             <div class="owl-carousel owl-example">
                                                 <div>
                                                     <br>
-                                                    <img src="images/Carrot.jpg" alt="" height="150px">
+                                                    <img src="images/Carrot.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1/2 carotte, finement hachée</h2>
+                                                    <h2>1/2 carotte, <br> finement hachée</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/onion.webp" alt="" height="150px">
+                                                    <img src="images/onion2.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1/2 onion, finement hachée</h2>
+                                                    <h2>1/2 onion, <br> finement hachée</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/green-bell-peppers.png" alt="" height="150px">
+                                                    <img src="images/green-bell-pepper.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1/3 poivron vert, finement hachée</h2>
+                                                    <h2>1/3 poivron vert, <br> finement hachée</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/Diced-ham.jpg" alt="" height="150px">
+                                                    <img src="images/Diced-ham.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>80 g de jambon de charcuterie fumé, de bœuf, de porc ou de poulet, finement haché</h2>
+                                                    <h2>80 g de jambon de charcuterie fumé, <br> de bœuf, de porc <br> ou de poulet, <br> finement haché</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/rice.jpg" alt="" height="150px">
+                                                    <img src="images/rice.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>2 tasses de riz cuit (à grains courts ou moyens), refroidi</h2>
+                                                    <h2>2 tasses de  <br>riz cuit (à grains courts <br> ou moyens), <br> refroidi</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/Oil2.webp" alt="" height="150px">
+                                                    <img src="images/Oil.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>Un peu d'huile de cuisson</h2>
+                                                    <h2>Un peu d'huile</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/homemade-ketchup.avif" alt="" height="150px">
+                                                    <img src="images/ketchup.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1 c. à soupe de ketchup</h2>
+                                                    <h2>1 c. à soupe <br> de ketchup</h2>
                                                 </div>
                                                 <div>
                                                     <br>
                                                     <img src="images/WorcestershireSauce.jpg" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1 c. à soupe de sauce Worcestershire</h2>
+                                                    <h2>1 c. à soupe de <br> sauce Worcestershire</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/kikkoman.jpg" alt="" height="150px">
+                                                    <img src="images/kikkoman.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1 c. à soupe de sauce soja (kikkoman)</h2>
+                                                    <h2>1 c. à soupe de <br> sauce soja (kikkoman)</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/ricewine.jpg" alt="" height="150px">
+                                                    <img src="images/ricewine.png" alt="" height="150px">
                                                     <br><br>
-                                                    <h2>1 c. à soupe de vin de riz</h2>
+                                                    <h2>1 c. à soupe de <br> vin de riz</h2>
                                                 </div>
                                             </div>
                                         </div>
@@ -327,19 +337,19 @@
                                             <div class="owl-carousel owl-example">
                                                 <div>
                                                     <br>
-                                                    <img src="images/egg.jpg" alt="" height="150px">
+                                                    <img src="images/egg.png" alt="" height="150px">
                                                     <br><br>
                                                     <h2>6 à 9 œufs (3 œufs par portion)</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/salt.jpg" alt="" height="150px">
+                                                    <img src="images/salt.png" alt="" height="150px">
                                                     <br><br>
                                                     <h2>Une pincée de sel</h2>
                                                 </div>
                                                 <div>
                                                     <br>
-                                                    <img src="images/Oil2.webp" alt="" height="150px">
+                                                    <img src="images/Oil.png" alt="" height="150px">
                                                     <br><br>
                                                     <h2>Un peu d'huile de cuisson</h2>
                                                 </div>                            
