--- a/membres/baris/baris.html
+++ b/membres/baris/baris.html
@@ -89,7 +89,7 @@
     </div>
   </header>
 <!-- ma recette header -->
-<section class="bsb-hero-1 px-3 bsb-overlay bsb-hover-pull" style="background-image: url('l-intro-1687386179.jpg');" data-aos="fade-up">
+<section class="bsb-hero-1 px-3 bsb-overlay bsb-hover-pull" data-aos="fade-up">
   <div class="container">
     <div class="row justify-content-md-center">
       <div class="col-12 col-md-11 col-lg-9 col-xl-7 col-xxl-6 text-center text-white">
@@ -99,7 +99,6 @@
     </div>
   </div>
 </section>
-
 <hr>
 
 <!-- Titre de la recette -->
@@ -109,7 +108,7 @@
 <div class="container my-4">
   <div class="row">
     <div class="col-md-6 d-flex justify-content-center" data-aos="fade-right">
-      <img id="imgg" class="img img-fluid" style="border: solid black;" src="recette.jpg" alt="plat">
+      <img id="imggg" class="img img-fluid" style="border: solid black;" src="recette.jpg" alt="plat">
     </div>
     <div class="col-md-6" data-aos="fade-left">
       <h2 class="ingre" data-aos="fade-up">Ingrédients</h2>
