--- a/membres/Erhan/Omurice/index.html
+++ b/membres/Erhan/Omurice/index.html
@@ -37,7 +37,10 @@
   -webkit-text-fill-color: transparent;
   font-family: japanese;
 }
-
+@font-face {
+  font-family: japanese;
+  src: url(./fonts/NightinTokyo.ttf);
+}
        
     </style>
 	</head>
@@ -76,7 +79,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img class="wow fadeInLeft img-responsive" data-wow-duration="300ms" data-wow-delay="400ms" src="images/Omurice5.jpg" alt="cooker-img">
+                    <img class="wow fadeInLeft img-responsive" style="border-radius: 20px;" data-wow-duration="300ms" data-wow-delay="400ms" src="images/Omurice5.jpg" alt="cooker-img">
                 </div>
                 <div class="col-md-6">
                     <h1 class="wow heading fadeInRight"> Qu’est-ce que le <span>Omurice (オムラ)</span></h1>
